# warm-tdm

./: .buildinfo  .gitignore  .gitmodules  Makefile  README.md  conda.yml  genindex.html  index.html  install.sh  objects.inv  pip_requirements.txt  pip_requirements_regression.txt  pytest.ini  ruckus.tcl  search.html  searchindex.js  structure.html
.github/workflows/: warm_tdm_ci.yml
_sources/: index.rst.txt
_sources/gui/: saoffset.rst.txt
client/: commands.html  index.html  variables.html  virtual_client.html
docs/: Makefile
docs/_meta/: rtl_regression_handoff.md  rtl_regression_inventory.yaml  rtl_regression_plan.md  rtl_regression_progress.md
docs/src/: conf.py  index.rst  structure.rst
docs/src/client/: commands.rst  index.rst  variables.rst  virtual_client.rst
docs/src/gui/: debug.rst  index.rst  satune.rst  system.rst  waveforms.rst
firmware/: releases.yaml
firmware/common/: TimingProtocol.md
firmware/common/warm_tdm/: ruckus.tcl
firmware/python/warm_tdm/: _Ad5263.py  _Ad5679R.py  _Ad9106.py  _AdcDsp.py  _Amplifiers.py  _AwaXeI2c.py  _BoardTemp.py  _BoardTemp2.py  _ColumnAwaXeFpgaBoard.py  _ColumnFpgaBoard.py  _ColumnModule.py  _ColumnVesperFpgaBoard.py  _ComCore.py  _DataFormats.py  _DataPath.py  _FastDacDriver.py  _FrontEnds.py  _GroupLinkVariable.py  _HardwareGroup.py  _PidDebugger.py  _Plotter.py  _RowDacDriver.py  _RowDacDriver2.py  _RowFpgaBoard.py  _RowModule.py  _RowModuleDacs.py  _RowSelect.py  _SaBiasOffset.py  _SaBiasOffset2.py  _SaBiasOffsetAwaXe.py  _SaBiasOffsetVesper.py  _Sq1Bias.py  _TesBias.py  _TesBias2.py  _TesBiasAd5542.py  _TesBiasAwaXe.py  _Timing.py  _TimingRx.py  _TimingTx.py  _VesperBoreasConfig.py  (+8 more)
firmware/simulations/GroupTb/: Makefile  ruckus.tcl
firmware/simulations/RowTb/: Makefile  ruckus.tcl
firmware/simulations/StackTb/: ruckus.tcl
firmware/targets/: Makefile
firmware/targets/ColumnFpgaBoard/: Makefile  ruckus.tcl
firmware/targets/ColumnFpgaBoard0/: ruckus.tcl
firmware/targets/ColumnFpgaBoard325Coordinator/: ruckus.tcl
firmware/targets/ColumnFpgaBoard325Coordinator10G/: Makefile  ruckus.tcl
firmware/targets/ColumnFpgaBoardAwaXe/: ruckus.tcl
firmware/targets/ColumnModule/: Makefile
firmware/targets/ColumnModule0/: Makefile  ruckus.tcl
firmware/targets/RowFpgaBoard/: ruckus.tcl
firmware/targets/RowFpgaBoard0/: ruckus.tcl
gui/: control.html  debug.html  index.html  saoffset.html  satune.html  system.html  waveforms.html
scripts/: ghdl_import.tcl  ghdl_proc_override.tcl  setup_regression_env.sh
software/: conda.yml
software/docker/: Dockerfile  Makefile  README.md  run.sh
software/jupyter/: DMM_Measurements_2-17.ipynb  Testing_B33_Load-board_3-25.ipynb  jupyter_template.ipynb
software/lib/: CMakeLists.txt
software/lib/cmake/: FindRogue.cmake  FindS4DAQSender.cmake
software/lib/include/: TdmDataReceiver.h  TdmGroupEmulate.h
software/lib/src/: CMakeLists.txt  TdmDataReceiver.cpp  TdmGroupEmulate.cpp  warm_tdm_lib.cpp
software/scripts/: CurveClass.py  DMM_Measurements_2-17.ipynb  DataFileReader.py  Jupyter.py  LatencyDebug.ipynb  PidDebugFileReader.py  PromLoader  TDMSubroutines.py  Testing_3-25.ipynb  callSubroutines.py  diffs.py  genDocs.py  gui.py  index.html  indextest.py  interactivetest.py  jupyter_template.ipynb  plotpdfdemo.py  plotting.py  temp.py  test.py  testGroup.py  testScript.py  testVar.py  warmTdmClientCmd.py  warmTdmClientGui.py  warmTdmEmulate.py  warmTdmGui.py  warmTdmServer.py
tests/: __init__.py
tests/common/: __init__.py  regression_utils.py
tests/warm_tdm/: __init__.py
(+182 files in other folders)
